W07 Chamber Website Project Submission (1 of 2)

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Barquisimeto Chamber of Commerce - Directory</title>
     <link rel="icon" href="favicon.ico" >
-    <meta name="author" content="Christopher Gomez Dallar wdd230" >
+    <meta name="author" content="Christopher Gomez Dallar" >
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce Directory Page website to promote a contact list of each member of the chamber of commerce."
@@ -32,25 +32,30 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="" >
+      <img src="images/logo.png" alt="Barquisimeto Chamber of Commerce Brand" >
       <button id="menu"></button>
       <nav class="navigation">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
-        <a href="directory.html">Directory</a>
+        <a href="directory.html" class="active">Directory</a>
         <a href="join.html">Join</a>
       </nav>
     </header>
 
     <main class="directory">
-      <div class="menu">
-        <button id="grid">⏹️Grid</button>
-        <button id="list">📄List</button>
-      </div>
-      <hr >
-      <article class="grid">
 
-      </article>
+      <h1>Directory</h1>
+
+      <div class="div">
+        <div class="menu">
+          <button id="grid">⏹️Grid</button>
+          <button id="list">📄List</button>
+        </div>
+        <hr >
+        <article class="grid">
+  
+        </article>
+      </div>
     </main>
 
     <footer>
