--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Barquisimeto Chamber of Commerce - Discover</title>
     <link rel="icon" href="favicon.ico" >
-    <meta name="author" content="Christopher Gomez Dallar wdd230" >
+    <meta name="author" content="Christopher Gomez Dallar" >
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
@@ -31,11 +31,11 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="" >
+      <img src="images/logo.png" alt="Barquisimeto Chamber of Commerce Brand" >
       <button id="menu"></button>
       <nav class="navigation">
-        <a href="index.html" class="active">Home</a>
-        <a href="discover.html">Discover</a>
+        <a href="index.html">Home</a>
+        <a href="discover.html" class="active">Discover</a>
         <a href="directory.html">Directory</a>
         <a href="join.html">Join</a>
       </nav>
@@ -61,7 +61,7 @@
           <picture>
             <img
               src="images/networking-larger.webp"
-              alt="larger"
+              alt="networking"
               width="500"
               height="300"
             >
@@ -87,7 +87,7 @@
           <img
             loading="lazy"
             src="images/box-import-larger.webp"
-            alt="larger"
+            alt="box-import"
             width="750"
             height="500"
           >
@@ -101,7 +101,7 @@
           <img
             loading="lazy"
             src="images/contract-larger.webp"
-            alt="larger"
+            alt="contract"
             width="750"
             height="500"
           >
@@ -115,7 +115,7 @@
           <img
             loading="lazy"
             src="images/e-commerce-larger.webp"
-            alt="larger"
+            alt="e-commerce"
             width="750"
             height="500"
           >
@@ -129,7 +129,7 @@
           <img
             loading="lazy"
             src="images/save-money-larger.webp"
-            alt="larger"
+            alt="save-money"
             width="750"
             height="500"
           >
@@ -140,7 +140,7 @@
           <img
             loading="lazy"
             src="images/ship-larger.webp"
-            alt="larger"
+            alt="ship"
             width="750"
             height="500"
           >
@@ -151,7 +151,7 @@
           <img
             loading="lazy"
             src="images/train-larger.webp"
-            alt="larger"
+            alt="train"
             width="750"
             height="500"
           >
