--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Barquisimeto Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico" >
-    <meta name="author" content="Christopher Gomez Dallar wdd230" >
+    <meta name="author" content="Christopher Gomez Dallar" >
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce Site Plan is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="" >
+      <img src="images/logo.png" alt="Barquisimeto Chamber of Commerce Brand" >
       <button id="menu"></button>
       <nav class="navigation">
         <a href="index.html" class="active">Home</a>
@@ -42,6 +42,7 @@
     </header>
 
     <main>
+      <h1>Barquisimeto Chamber of Commerce</h1>
     </main>
 
     <footer>
