--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Barquisimeto Chamber of Commerce - Join</title>
     <link rel="icon" href="favicon.ico" >
-    <meta name="author" content="Christopher Gomez Dallar wdd230" >
+    <meta name="author" content="Christopher Gomez Dallar" >
     <meta
       name="description"
       content="Barquisimeto Chamber of Commerce is a website to promote business and share with as many people as possible news and recent events and a contact list of each member of the chamber of commerce."
@@ -21,19 +21,23 @@
       property="og:url"
       content="https://christopherdallar.github.io/wdd230/chamber/join.html"
     >
+    <meta
+      property="og:image"
+      content="https://christopherdallar.github.io/wdd230/chamber/images/home_page.png"
+    >
     <link rel="stylesheet" href="styles/normalize.css" >
     <link rel="stylesheet" href="styles/base.css" >
     <link rel="stylesheet" href="styles/larger.css" >
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="" >
+      <img src="images/logo.png" alt="Barquisimeto Chamber of Commerce Brand" >
       <button id="menu"></button>
       <nav class="navigation">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="directory.html">Directory</a>
-        <a href="join.html">Join</a>
+        <a href="join.html" class="active">Join</a>
       </nav>
     </header>
 
