--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -66,6 +66,7 @@
       <p id="lastModified"></p>
     </footer>
 
+    <script src="scripts/getDates.js"></script>
     <script src="scripts/directory.js"></script>
     <script src="scripts/hamburgerMenu.js"></script>
   </body>
