--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -167,6 +167,7 @@
       <p id="lastModified"></p>
     </footer>
 
+    <script src="scripts/getDates.js"></script>
     <script src="scripts/discover.js"></script>
     <script src="scripts/hamburgerMenu.js"></script>
   </body>
