--- a/chamber/join.html
+++ b/chamber/join.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="form-group">
-          <label for="position">Position</label>
+          <label for="position">Business Title</label>
           <input
             type="text"
             name="position"
